# smart-fashion

./: .dockerignore  .env.example  .gitignore  CLAUDE.md  Dockerfile  README.md  analyze_results.py  benchmark-docker.ps1  benchmark-podman.ps1  check-image-size.ps1  check-podman-size.ps1  compose.yml  main.py  pyproject.toml  requirements.txt  verify_image_urls.py  worker.py
.claude/: settings.local.json
app/: config.py
app/controllers/: __init__.py  api_controller.py  gallery_controller.py  segment_controller.py  upload_controller.py
app/models/: __init__.py  detection_schema.py  health_schema.py  image_schema.py  job_schema.py  mongo.py  s3.py  schemas.py  upload_schema.py
app/services/: __init__.py  api.py  database_service.py  minio_service.py  mongo_service.py  onnx_inference.py  s3_service.py  segmentation_service.py  storage_service.py  web_service.py
db/: schema.sql
docs/: SCANDINAVIAN_QUICK_START.md  SCANDINAVIAN_README.md  database_design.md  frontend_design.md  intergration_tests.md  minio_public_url_fix.md  scandinavian_design_guide.md  scandinavian_redesign_plan.md
static/: gallery.js  home.js  product-detail.js  scandinavian.css
static/js/: main.js
static/js/modules/: canvasModal.js  canvasRenderer.js  (+6 more)
templates/: gallery.html  index.html  product-detail.html
templates/components/: canvas_modal.html  gallery_item.html  upload_zone.html
templates/layouts/: base.html
templates/macros/: navigation.html  pagination.html  stats.html
templates/pages/: gallery.html  index.html  product_detail.html
tests/: conftest.py  test_level1_infrastructure.py  test_level2_services.py  test_level3_api.py  test_level4_ui.py
(+4 files in other folders)
